# Aisher

./: .env.example  .env.test  .gitignore  CLAUDE.md  CODE_REVIEW.md  IMPROVEMENT_ANALYSIS.md  Makefile  QUICK_START.md  README.md  REPOSITORY_IMPROVEMENTS.md  REPOSITORY_REVIEW.md  config.py  docker-compose.test.yml  error_analyzer.py  main.py  models.py  pyproject.toml  repository.py  requirements.txt  setup.sh
.github/workflows/: README.md  ci.yml  claude-review.yml
scripts/: run_integration_tests.sh
src/aisher/: __init__.py  analyzer.py  config.py  main.py  models.py  repository.py  toon_formatter.py
tests/: conftest.py  test_error_analyzer.py  test_integration_docker.py
tests/docker/clickhouse/: init.sql
