[project]
name = "aisher"
version = "0.1.0"
description = "ClickHouse log analyzer with LLM-powered insights"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clickhouse-connect>=0.8.0",
    "litellm==1.30.0",
    "pydantic==2.6.0",
    "pydantic-settings==2.1.0",
    "aiohttp==3.9.0",
    "httpx==0.26.0",
    "prometheus-client==0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-asyncio==0.21.0",
    "pytest-cov==4.1.0",
    "black==23.12.0",
    "ruff==0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aisher"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/aisher"]
relative_files = true
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
